--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.0",
     "prettier": "^2.5.1",
